--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <main class="main">
 
-    <img class="main__glass" src="../assets/water-glass.svg" alt="A glass with water.">
+    <img class="main__glass" src="./assets/water-glass.svg" alt="A glass with water.">
     <button class="main__button main__button--add">
       add glass
     </button>
