--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:image" content="" />
 
   <link rel="icon" type="image/ico" href="../assets/water-glass.svg" />
-  
+
   <link rel="mainfest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa/icons/icon-192x192.png" />
@@ -39,6 +39,7 @@
   </main>
 
   <script src="js/main.js"></script>
+  <script src="../js/pwa.js"></script>
 </body>
 
 </html>
