fix: link to mainfest in index.html

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -16,7 +16,7 @@
 
   <link rel="icon" type="image/ico" href="./assets/water-glass.svg" />
 
-  <link rel="mainfest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa/icons/icon-192x192.png" />
   <link rel="icon" type="image/png" href="assets/pwa/icons/icon-192x192.png" />
