feat: added counter to glass

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -27,15 +27,20 @@
 
 <body>
 
-  <main class="main">
+  <main class="glass">
 
-    <img class="main__glass" src="./assets/water-glass.svg" alt="A glass with water.">
-    <button class="main__button main__button--add">
+    <div class="glass__area">
+      <p class="glass__counter">0</p>
+      <img class="glass__img" src="./assets/water-glass.svg" alt="A glass with water." />
+    </div>
+
+    <button class="glass__button glass__button--add">
       add glass
     </button>
-    <button class="main__button main__button--remove">
+    <button class="glass__button glass__button--remove">
       remove glass
     </button>
+
   </main>
 
   <script src="js/main.js"></script>
